[package]
name = "rlib"
version = "0.1.0"
authors = ["Nullsanya"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = [ "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.69"

[build-dependencies]
cbindgen = "*"
